--- a/rule_following/RuleFollowing.html
+++ b/rule_following/RuleFollowing.html
@@ -245,21 +245,21 @@
     <div class="card-body">
 
         <p style="text-align: center; ">
-            In this part, you decide how to position three sliders.
+            {{ rule_instru }}
         </p>
 
         {{ if condition == 'hurt_me' }}
         <p style="text-align: center; ">
-            For each slider that you move to position “{{ aim }}”, you will lose {{ points_per_slider }} points.
+            {{ rule_aim_me }}
         </p>
         {{ else }}
         <p style="text-align: center; ">
-            For each slider you move to position "{{ aim }}", another participant in this study will lose {{ points_per_slider }} points.
+            {{ rule_aim_another }}
         </p>
         {{ endif }}
 
         <p style="text-align: center; ">
-            <b> The rule of this task is to move each slider to position “{{ aim }}”. </b>
+            <b> {{ rule_rule }} </b>
         </p>
         <br>
 
@@ -312,8 +312,10 @@
         <div id="points-display" data-condition="{{ condition }}" style="text-align: center;">
             {{ if condition == 'hurt_me' }}
                 You lose 0 points.
+                {{ rule_me_lose }}
             {{ else }}
                 Another participant loses 0 points.
+                {{ rule_another_lose }}
             {{ endif }}
         </div>
 
