2pp vs 3pp and dice task done and checked

--- a/dice_task/DiceRatings.html
+++ b/dice_task/DiceRatings.html
@@ -14,7 +14,6 @@
 </div>
 
 
-
 {{ endblock }}
 
 {{ block content }}
@@ -28,6 +27,10 @@
     <link rel="stylesheet" href="{% static 'shared_styles.css' %}">
 
     <style>
+
+        body {
+            text-align: center;
+        }
 
         .dice-container {
             justify-content: center;
