--- a/pref_2PP_3PP/Pref_2PP_3PP.html
+++ b/pref_2PP_3PP/Pref_2PP_3PP.html
@@ -4,7 +4,7 @@
     Block 2
 </div>
 
-<p style="text-align: center; font-size: 26px;  "> Decision {{ participant.decision_page_number }} </p>
+<p style="text-align: center; font-size: 26px;  "> {{ button_decision }}{{ participant.decision_page_number }} </p>
 
 <div style="display: flex; justify-content: center; margin-bottom: 4px;">
     <label>
